dataset/local/tf_lambda_source_arn/resource.yaml
apiVersion: terraform.io/v1
kind: Plan
metadata:
  name: good-plan
terraform_version: "1.8.4"
planned_values:
  root_module:
    resources:
      - type: aws_lambda_permission
        name: allow_s3
        values:
          action: lambda:InvokeFunction
          function_name: my-lambda-function
          principal: "s3.amazonaws.com"
          source_arn: "arn:aws:s3:::my-bucket"
---
apiVersion: terraform.io/v1
kind: Plan
metadata:
  name: bad-plan
terraform_version: "1.8.4"
planned_values:
  root_module:
    resources:
      - type: aws_lambda_permission
        name: allow_s3
        values:
          action: lambda:InvokeFunction
          function_name: my-lambda-function
          principal: "s3.amazonaws.com"
          source_arn: null
          source_account: null
